# wgrd-tools

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ci-build.sh
.github/workflows/: build_cmake.yml
src/: databaselayout.md  edat.cpp  edat.hpp  edat_helper.cpp  ndf.cpp  ndf.hpp  ndf_bin.cpp  ndf_bin_properties.cpp  ndf_db.cpp  ndf_db.hpp  ndf_db_properties.cpp  ndf_helper.cpp  ndf_properties.hpp  ndf_xml_properties.cpp  ndfbin.cpp  ndfbin.hpp  ndfbin_helper.cpp  sqlite_helpers.hpp  utf.hpp
tests/: generator.cpp  generator.hpp  ndf_db_tests.cpp  sqlite_tests.cpp
